--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -132,42 +132,40 @@
 
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.2/dist/chart.umd.min.js"></script>
     <script src="admin.js"></script>
 
     <script>
-        function logout() {
-            if (confirm('Tem certeza que deseja sair?')) {
-                localStorage.removeItem('adminLogado');
-                window.location.href = 'admin.html';
-            }
+    function logout() {
+        if (confirm('Tem certeza que deseja sair?')) {
+            localStorage.removeItem('adminLogado');
+            location.reload(); // Recarrega e mostra o modal
         }
+    }
 
-        function verificarLogin() {
-            const senha = document.getElementById('senhaAdmin').value;
-            if (senha === 'Irinamandante') { // ✅ SENHA ATUALIZADA
-                localStorage.setItem('adminLogado', 'true');
-                const loginModal = bootstrap.Modal.getInstance(document.getElementById('loginModal'));
-                loginModal.hide();
+    function verificarLogin() {
+        const senha = document.getElementById('senhaAdmin').value;
+        if (senha === 'Irinamandante') {
+            localStorage.setItem('adminLogado', 'true');
+            const loginModal = bootstrap.Modal.getInstance(document.getElementById('loginModal'));
+            loginModal.hide();
+            setTimeout(() => {
                 carregarTudo();
-            } else {
-                alert('Senha incorreta!');
-            }
+            }, 500); // Pequeno delay para garantir que o modal fechou
+        } else {
+            alert('Senha incorreta!');
         }
+    }
 
-        // Verifica login ao carregar
+    // ✅ VERIFICA LOGIN AO CARREGAR A PÁGINA
+    document.addEventListener('DOMContentLoaded', function() {
         if (!localStorage.getItem('adminLogado')) {
             const loginModal = new bootstrap.Modal(document.getElementById('loginModal'));
             loginModal.show();
         } else {
             carregarTudo();
         }
-
-        function carregarTudo() {
-            carregarEstatisticas();
-            carregarAnunciosAguardando();
-            carregarGraficos();
-        }
-    </script>
+    });
+</script>
 </body>
 </html>
